--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -68,23 +68,29 @@
 \ThesisTitlePage
 
 \begin{ThesisDeclaration}
+\addcontentsline{toc}{chapter}{Declaration}
 \DeclarationText
 \AdvisorName
 \end{ThesisDeclaration}
 
 \begin{ThesisThanks}
+\addcontentsline{toc}{chapter}{Acknowledgement}
 I would like to thank to Libor, Zuzana and mommy.
 \end{ThesisThanks}
 
 \begin{ThesisAbstract}
+\addcontentsline{toc}{chapter}{Abstract}
 The aim of the master's thesis/work is to provide...
 \end{ThesisAbstract}
 
 % XXX! Check whether they are relevant.
 \begin{ThesisKeyWords}
+\addcontentsline{toc}{chapter}{Keywords}
 Haskell, type system, type extension
 \end{ThesisKeyWords}
 
+\clearpage
+\addcontentsline{toc}{chapter}{Contents}
 \tableofcontents
 \listoffigures
 
