--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -11,15 +11,16 @@
 \usepackage[plainpages=false,pdfpagelabels,unicode]{hyperref}
 \usepackage[all]{hypcap}
 \usepackage{caption}
-\usepackage{chemarrow}
 
-\usepackage{amsmath,amsthm,amsfonts}
 \usepackage{lmodern}
+\usepackage{chemarrow}
+\usepackage{amsmath,amsthm,amsfonts}
 \usepackage{mathrsfs}
 %\usepackage{ae}
-
 \usepackage{fancyvrb}
 \usepackage{enumerate}
+\usepackage{mathpartir}
+
 \clubpenalty=1000
 \widowpenalty=1000
 \renewcommand{\baselinestretch}{1.08}
