--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -1,11 +1,16 @@
 @book{pierce:2002:types,
   title = {{Types and programming languages}},
-  author = {Pierce, B.C.},
+  author = {Benjamin C. Pierce},
   isbn = {9780262162098},
   lccn = {2001044428},
   url = {http://www.google.com/books?id=ti6zoAC9Ph8C},
   year = {2002},
-  publisher = {MIT Press}
+  publisher = {MIT Press},
+  plclub = {Yes},
+  bcp = {Yes},
+  keys = {books},
+  homepage = {http://www.cis.upenn.edu/~bcpierce/tapl},
+  errata = {http://www.cis.upenn.edu/~bcpierce/tapl/errata.txt},
 }
 
 @inbook{barendregt:1992:lambda,
@@ -37,7 +42,7 @@
   title = {Haskell 2010 Language Report},
   year = {2010},
   url = {www.haskell.org/definition/haskell2010.pdf},
-  note = {\url{www.haskell.org/definition/haskell2010.pdf}}
+  note = {\url{www.haskell.org/definition/haskell2010.pdf}},
 }
 
 @misc{haskell.org,
@@ -45,22 +50,24 @@
   title = {Haskell.org},
   url = {http://haskell.org/},
   note = {\url{http://haskell.org}},
-  year = 2011
+  year = {2011},
 }
 
 @misc{libor,
   author = {Libor Škarvada},
   howpublished = {Personal communication},
-  year = 2011
+  year = {2011},
+  url = {http://www.fi.muni.cz/~libor/},
+  note = {\url{http://www.fi.muni.cz/~libor/}},
 }
 
 @article{parker:tlii,
-  Author = {Conrad Parker},
-  Journal = {The Monad.Reader},
-  Month = {September},
-  Title = {{Type-Level Instant Insanity}},
-  Volume = {Issue Eight},
-  Year = {2007},
+  author = {Conrad Parker},
+  journal = {The Monad.Reader},
+  month = {September},
+  title = {{Type-Level Instant Insanity}},
+  volume = {Issue Eight},
+  year = {2007},
   url = {http://www.haskell.org/wikiupload/d/dd/TMR-Issue8.pdf}
 }
 
@@ -73,8 +80,19 @@
   year = {2009},
   month = mar,
   day = {12},
+  volume = {Issue thir\-teen},
   number = {13},
   pages = {17--68},
   url = {http://www.haskell.org/wikiupload/8/85/TMR-Issue13.pdf}
+}
+
+@techreport{GADT+Kind=Dep,
+  author = {Tim Sheard and James Hook and Nathan Linger},
+  title = {{GADT}s + Extensible Kind System = Dependent Programming},
+  subtitle = {A Programming Pearl for the 21st Century},
+  year = {2005},
+  institution = {Portland State University},
+  url = {http://www.cs.pdx.edu/~sheard/},
+  note = {\url{http://www.cs.pdx.edu/~sheard/}}
 }
 
