--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -88,11 +88,22 @@
 
 @techreport{GADT+Kind=Dep,
   author = {Tim Sheard and James Hook and Nathan Linger},
-  title = {{GADT}s + Extensible Kind System = Dependent Programming},
+  title = {{GADT}s + Extensible Kinds = Dependent Programming},
   subtitle = {A Programming Pearl for the 21st Century},
   year = {2005},
   institution = {Portland State University},
   url = {http://www.cs.pdx.edu/~sheard/},
   note = {\url{http://www.cs.pdx.edu/~sheard/}}
+}
+
+@article{luo:99:coercive,
+  author = {Zhaohui Luo},
+  title = {Coercive Subtyping},
+  journal = {Journal of Logic and Computation},
+  year = {1999},
+  volume = {9},
+  pages = {105-130},
+  number = {1},
+  url = {citeseer.ist.psu.edu/luo95coercive.html},
 }
 
