fun types in bibtex

--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -107,3 +107,10 @@
   url = {citeseer.ist.psu.edu/luo95coercive.html},
 }
 
+@misc{spjones:2009:funTypesFun,
+  author = {Simon Peyton Jones and Chung-Chieh Shan and Oleg Kiselyov},
+  title = {Fun with Type Functions},
+  year = {2009},
+  url = {http://research.microsoft.com/en-us/um/people/simonpj/papers/assoc-types/fun-with-type-funs/FunWithTypeFuns-Apr09.pdf},
+  note = {\url{http://research.microsoft.com/en-us/um/people/simonpj/papers/assoc-types/fun-with-type-funs/FunWithTypeFuns-Apr09.pdf}},
+}
